--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <input type="email" name="email" id="email" placeholder="Enter Email" required>
 
       <!-- Add a label for 'phone'-->
-
+      <label for="phone">Phone</label>
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-
+      <input type="tel" name="phone" id="phone" placeholder="Enter Telephone">
 
       <!-- Add a label for 'message'-->
 
