--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <textarea name="message" id="message" placeholder="Enter Message"></textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-
+      <input type="checkbox" name="checkbox" id="checkbox">
 
 
       <!-- Add an input with the type set to 'submit' -->
